pinbot: move to #ipfs-pinbot
License: MIT
Signed-off-by: Lars Gierth <larsg@systemli.org>

--- a/ansible/roles/pinbot/tasks/main.yml
+++ b/ansible/roles/pinbot/tasks/main.yml
@@ -33,7 +33,7 @@
 - docker:
     name: pinbot
     image: "pinbot:{{ pinbot_ref }}"
-    command: '--name=pinbot --channel=#ipfs --prefix="!"'
+    command: '--name={{ pinbot_nick }} --channel={{ pinbot_channel }} --prefix="!"'
     state: reloaded
     restart_policy: always
     net: host
