--- a/ansible/roles/pinbot/defaults/main.yml
+++ b/ansible/roles/pinbot/defaults/main.yml
@@ -1,3 +1,5 @@
 ---
 pinbot_git: https://github.com/whyrusleeping/pinbot.git
-pinbot_ref: a720a996808c9eca8f82510b91347c117f8d57fc
+pinbot_ref: 1bb0db1e2f226a31fde10c005e16c99fadd3fca0
+pinbot_channel: "#ipfs-pinbot"
+pinbot_nick: pinbot
